# ozz-animation

./: .gitignore  CMakeLists.txt
capi/: CMakeLists.txt  cwrapper.cc  cwrapper.h  cwrapperRenderer.cc  cwrapperRenderer.h  cwrapperShader.cc  cwrapperShader.h  cwrapperUtils.cc  cwrapperUtils.h
samples/: CMakeLists.txt
samples/capi/: CMakeLists.txt  cwrapper.cc  cwrapper.h  cwrapperRenderer.cc  cwrapperRenderer.h  cwrapperShader.h  cwrapperUtils.h
samples/framework/internal/: shader.cc
samples/playback/: CMakeLists.txt  cwrapper.cc  cwrapper.h  cwrapperRenderer.cc  cwrapperRenderer.h  cwrapperShader.cc  sample_playback.cc
